# husk-quick-start

./: LICENSE  Makefile  README.md
husk-quickstart/: husk-quickstart.cabal  stack.yaml
